--- a/Practica-2-Pastelero/index.html
+++ b/Practica-2-Pastelero/index.html
@@ -336,7 +336,9 @@
 
 
       <footer class="footer">
-
+        <span>
+          (c) Alejandro 2022 | All rights reserved. 
+        </span>
       </footer>
     
     <!-- Link SwiperKJS JS -->
