Diseño final de pasteleria

--- a/Practica-2-Pastelero/index.html
+++ b/Practica-2-Pastelero/index.html
@@ -33,6 +33,7 @@
               <li class="nav__item"><a href="#sabores">Sabores</a></li>
               <li class="nav__item"><a href="#adornos">Adornos</a></li>
               <li class="nav__item"><a href="#pedidos">Pedidos</a></li>
+              <li class="nav__item" id="pastelero"><a href="./pastelero.html">Pastelero</a></li>
             </ul>
             <div class="iconClose">
               <i class="fa fa-times sidebarClose"></i>
