--- a/Practica-2-Pastelero/pastelero.html
+++ b/Practica-2-Pastelero/pastelero.html
@@ -25,7 +25,7 @@
             <ul class="nav__list">
               <li class="nav__item"><a href="./index.html">Home</a></li>
               <li class="nav__item"><a href="#inventario">Inventario</a></li>
-              <li class="nav__item"><a href="#pedidos">Pedidos</a></li>
+              <li class="nav__item"><a href="#pedidos-pastelero">Pedidos</a></li>
               <li class="nav__item" id="pastelero"><a href="./pastelero.html">Pastelero</a></li>
             </ul>
           </nav>
@@ -104,7 +104,7 @@
     </section>
 
     <!-- PEDIDOS SECTION -->
-    <section class="pedidos" id="pedidos">
+    <section class="pedidos-pastelero" id="pedidos-pastelero">
 
         <h2 class="heading">Pedidos</h2>
 
@@ -241,10 +241,17 @@
                     </tr>
                 </table>
             </div>
-
         </div>
 
     </section>
+
+    <!-- FOOTER STARTS -->
+    <footer class="footer">
+        <span>
+          (c) Alejandro 2022 | All rights reserved. 
+        </span>
+    </footer>
+    <!-- FOOTER ENDS -->
 
 </body>
 </html>
